# svcpasswdgen

./: CHANGELOG.md  Cargo.toml  LICENSE-MIT  README.md
src/: base64_trait.rs  cli_parser.rs  clipboard.rs  lib.rs  main.rs  password.rs
tests/: base64_trait.rs  password.rs
