[package]
name = "svcpasswdgen"
version = "2.0.0"
edition = "2021"
authors = ["Sven Putze <sven.putze@tu-dortmund.de>"]
description = "Create deterministic passwords from input data"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
argon2 = "0.5.0"
base64 = "0.21.0"
clap = "4"
ring = "0.16"
rpassword = "7"


[profile.release]
strip = "symbols"
