[package]
name = "svcpasswdgen"
version = "2.1.5"
edition = "2021"
authors = ["Sven Putze <github@hardcodes.de>"]
description = "Create deterministic passwords from input data"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
argon2 = { version = "0.5.0", features = ["zeroize"] }
base64 = "0.22"
clap = { version = "4", features = ["wrap_help"] }
copypasta = "0.10.0"
rand = { version = "0.8"}
ring = "0.17"
rpassword = "7"
zeroize = "1.8"


[profile.release]
# Strip symbols to reduce binary size
strip = "symbols"
# Enable Link Time Optimization (LTO) to reduce binary size (longer build times)
lto = true
# Reduce parallel code generation units to increase optimization and reduce binary size (longer build times)
codegen-units = 1
